<resources>
    <string name="app_name">CryptoWatch</string>
    <string name="loading_message">0.00</string>
    <string name="title_activity_add_account">New Address</string>
    <string name="coin_prompt">Select Coin Type</string>
    <string name="total_balance">Total Portfolio Value</string>
    <string-array name="coins">
        <item>ARK - Ark</item>
        <item>BTC - Bitcoin</item>
        <item>BCH - Bitcoin Cash</item>
        <item>DASH - Dash</item>
        <item>ETH - Ethereum</item>
        <item>IOTA - Internet of Things Application</item>
        <item>LTC - Litecoin</item>
        <item>XMR - Monero</item>
        <item>XRP - Ripple</item>
        <item>VTC - Vertcoin</item>
        <item>ZEC - ZCash</item>
    </string-array>
    <string name="add_button">New Address</string>
    <string name="Coin">Coin</string>
    <string name="Holdings">Holdings</string>
    <string name="Price">Price</string>
    <string name="enterCoinSymbol">Enter Coin Symbol</string>
    <string name="coinicon">coinIcon</string>
    <string name="miota">ERROR</string>
    <string name="delete">Delete Coin</string>
    <string name="plus">+</string>
    <string name="refresh">Refresh</string>
    <string name="dollarsign">$</string>
    <string name="change24hr">24hr Change</string>
    <string name="infobutton">i</string>
    <string name="newCoin">New Coin</string>
    <string name="help">Help</string>
</resources>
